<?xml version="1.0"?>
<package>
  <name>test1</name>
  <version>0.0.0</version>
  <description>The test1 package</description>

  <maintainer email="k-okada@todo.todo">k-okada</maintainer>

  <license>TODO</license>

  <build_depend>test2</build_depend>
  <build_depend>test3</build_depend>
  <run_depend>test2</run_depend>
  <run_depend>test3</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rospy</test_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
