<?xml version="1.0"?>
<package>
  <name>test24</name>
  <version>0.0.0</version>
  <description>The test24 package</description>

  <maintainer email="k-okada@todo.todo">k-okada</maintainer>

  <license>TODO</license>

  <build_depend>test25</build_depend>
  <run_depend>test25</run_depend>

  <test_depend>rostest</test_depend>
  <test_depend>rospy</test_depend>
  <buildtool_depend>catkin</buildtool_depend>


  <export>
  </export>
</package>
